--- a/recipes/styles.css
+++ b/recipes/styles.css
@@ -1,4 +1,9 @@
-/* This section holds CSS properties for the 'Chicken Curry' html file */
+/* This section holds CSS syntax for the 'Chicken Curry' html file */
+
+/* Font family */
+.fonts {
+    font-family: Verdana, 'Times New Roman', Times, sans-serif;
+}
 
 /* chicken curry headline ID */
 #main-headline2 {
@@ -13,4 +18,29 @@
 img {
     height: auto;
     width: 300;
+}
+
+/* chicken curry 'Description' title CSS Syntax */
+.sub-headline {
+    font-weight: 600;
+    background-color: #ffff0080;
+    color: #000000;
+    text-align: center;
+    font-size: 40px;
+}
+
+/* CSS syntax for 'Ingredients' & 'Steps' title */
+.ingredients, 
+.steps {
+    font-weight: 500;
+    background-color: #ff000080;
+    text-align: center;
+    font-size: 20;
+}
+
+/* CSS syntax for the 'P' tags and 'List' tags */
+p, 
+ol, 
+li {
+    font-size: 20px;
 }
